sample_manifest (12).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'mbsgui-sandeep-java-dev'
  namespace: 'mbs-test'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'mbs-app-gui'
    branch: 'sandeep'
    commit: 'a636d04'
    role: java
    environment: dev
spec:
  rules:
    - host: mbsgui-dev-sandeep.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'mbsgui-sandeep-java-dev'
              servicePort: 8080
  tls:
    - hosts:
      - 'mbsgui-dev-sandeep.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'mbsgui-sandeep-java-dev'
  namespace: 'mbs-test'
  labels:
    project: 'mbs-app-gui'
    branch: 'sandeep'
    commit: 'a636d04'
    role: java
    environment: dev
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'mbs-app-gui'
    branch: 'sandeep'
    commit: 'a636d04'
    role: java
    environment: dev
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'mbsgui-sandeep-java-dev'
  labels:
    project: 'mbs-app-gui'
    branch: 'sandeep'
    commit: 'a636d04'
    role: java
    environment: dev
spec:
  selector:
    matchLabels:
      project: 'mbs-app-gui'
      branch: 'sandeep'
      role: java
      environment: dev
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'mbs-app-gui'
        branch: 'sandeep'
        commit: 'a636d04'
        role: java
        environment: dev
    spec:
      containers:
        - name: java-sandeep
          image: 'nexusprod.corp.intranet:4567/mbs_dev/mbs-app-gui:sandeep'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi
              cpu: 250m
            requests:
              memory: 512Mi
              cpu: 100m
      imagePullSecrets:
        - name: mbs-app-gui-sandeep
---
---
